# sre_glsl_editor

./: .gitmodules  CMakeLists.txt  README.md  em-build.sh  macOs-package.sh
docs/: GLSL_Editor.data  GLSL_Editor.html  GLSL_Editor.html.mem  GLSL_Editor.js  index.html
examples/: single-color.shader  single-color.shader.frag.glsl  single-color.shader.vert.glsl
src/: EditorComponent.cpp  EditorComponent.hpp  GLSLEditor.cpp  GLSLEditor.hpp  Settings.cpp  Settings.hpp  SettingsComponent.cpp  SettingsComponent.hpp  UniformComponent.cpp  UniformComponent.hpp  main.cpp
